modules/eks/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcare-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 80
          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 80
